Fix issue with mobile nav z-index.
The mobile nav was appearing behind the featured pet slider. This is
because the mobile nav is not actually part of the main navbar, so it
wasn't inheriting the navbar's z-index.

Fixes #52

--- a/chmvh_website/static/css/modules/_navbar.scss
+++ b/chmvh_website/static/css/modules/_navbar.scss
@@ -53,6 +53,7 @@
   @include element('nav') {
     flex-grow: 1;
     text-align: right;
+    z-index: $z-nav;
 
     @include media($navbar-breakpoint) {
       background: $navbar-bg;
